--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html,
 body,
 div,
@@ -92,6 +91,11 @@ video {
   vertical-align: baseline;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+  background: transparent;
+}
 /* 
 :root {
   --foreground-rgb: 0, 0, 0;
